Refactor and migrate tests