@@ -1,7 +1,5 @@
 package org.cloudfoundry.multiapps.controller.core.parser;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -27,50 +25,49 @@ class UriParametersParserTest {
                          // with no uri parameters
                          Arguments.of(null, null, null, null, null,
                                       new Expectation(Expectation.Type.STRING,
-                                                      Collections.singletonList(DEFAULT_HOST + "." + DEFAULT_DOMAIN)
-                                                                 .toString())),
+                                                      List.of(DEFAULT_HOST + "." + DEFAULT_DOMAIN)
+                                                          .toString())),
                          // with only host parameter
                          Arguments.of("some-host", null, null, null, null,
                                       new Expectation(Expectation.Type.STRING,
-                                                      Collections.singletonList("some-host." + DEFAULT_DOMAIN)
-                                                                 .toString())),
+                                                      List.of("some-host." + DEFAULT_DOMAIN)
+                                                          .toString())),
                          // with host and domain parameters
                          Arguments.of("some-host", "some-domain.com", null, null, null,
                                       new Expectation(Expectation.Type.STRING,
-                                                      Collections.singletonList("some-host.some-domain.com")
-                                                                 .toString())),
+                                                      List.of("some-host.some-domain.com")
+                                                          .toString())),
                          // with plural hosts and domains parameters
-                         Arguments.of(null, null, Arrays.asList("host1", "host2"), Arrays.asList("domain1.com", "domain2.com"), null,
+                         Arguments.of(null, null, List.of("host1", "host2"), List.of("domain1.com", "domain2.com"), null,
                                       new Expectation(Expectation.Type.STRING,
-                                                      Arrays.asList("host1.domain1.com", "host2.domain1.com", "host1.domain2.com",
-                                                                    "host2.domain2.com")
-                                                            .toString())),
+                                                      List.of("host1.domain1.com", "host2.domain1.com", "host1.domain2.com",
+                                                              "host2.domain2.com")
+                                                          .toString())),
                          // with both singular and plural parameters, testing that only the plural parameters are taken
-                         Arguments.of("host1", "domain1.com", Collections.singletonList("host2"),
-                                      Arrays.asList("domain2.com", "domain3.com"), null,
+                         Arguments.of("host1", "domain1.com", List.of("host2"), List.of("domain2.com", "domain3.com"), null,
                                       new Expectation(Expectation.Type.STRING,
-                                                      Arrays.asList("host2.domain2.com", "host2.domain3.com")
-                                                            .toString())),
+                                                      List.of("host2.domain2.com", "host2.domain3.com")
+                                                          .toString())),
                          // with only routes parameters
-                         Arguments.of(null, null, null, null, Collections.singletonList("my.custom.route"),
+                         Arguments.of(null, null, null, null, List.of("my.custom.route"),
                                       new Expectation(Expectation.Type.STRING,
-                                                      Collections.singletonList("my.custom.route")
-                                                                 .toString())),
+                                                      List.of("my.custom.route")
+                                                          .toString())),
                          // with host and routes parameters - host is ignored
-                         Arguments.of("some-host", null, null, null, Collections.singletonList("my.custom.route"),
+                         Arguments.of("some-host", null, null, null, List.of("my.custom.route"),
                                       new Expectation(Expectation.Type.STRING,
-                                                      Collections.singletonList("my.custom.route")
-                                                                 .toString())),
+                                                      List.of("my.custom.route")
+                                                          .toString())),
                          // with domain and routes parameters - host is ignored
-                         Arguments.of(null, "some-domain.com", null, null, Collections.singletonList("my.custom.route"),
+                         Arguments.of(null, "some-domain.com", null, null, List.of("my.custom.route"),
                                       new Expectation(Expectation.Type.STRING,
-                                                      Collections.singletonList("my.custom.route")
-                                                                 .toString())),
+                                                      List.of("my.custom.route")
+                                                          .toString())),
                          // with routes parameters containing starting with http schema - it is removed
-                         Arguments.of(null, null, null, null, Arrays.asList("https://my.custom.route", "http://*.my.custom.route"),
+                         Arguments.of(null, null, null, null, List.of("https://my.custom.route", "http://*.my.custom.route"),
                                       new Expectation(Expectation.Type.STRING,
-                                                      Arrays.asList("my.custom.route", "*.my.custom.route")
-                                                            .toString())));
+                                                      List.of("my.custom.route", "*.my.custom.route")
+                                                          .toString())));
     }
 
     @ParameterizedTest
@@ -84,8 +81,7 @@ class UriParametersParserTest {
         parameterMap.put(SupportedParameters.DOMAINS, domains);
         parameterMap.put(SupportedParameters.ROUTES, constructRoutesParameter(routes));
 
-        tester.test(() -> new UriParametersParser(DEFAULT_HOST, DEFAULT_DOMAIN, null).parse(Collections.singletonList(parameterMap)),
-                    expectation);
+        tester.test(() -> new UriParametersParser(DEFAULT_HOST, DEFAULT_DOMAIN, null).parse(List.of(parameterMap)), expectation);
     }
 
     private List<Map<String, String>> constructRoutesParameter(List<String> routes) {
