@@ -1,30 +1,29 @@
 package org.cloudfoundry.multiapps.controller.persistence.services;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.InputStream;
-import java.util.Arrays;
 import java.util.List;
 
 import org.cloudfoundry.multiapps.controller.persistence.DataSourceWithDialect;
 import org.cloudfoundry.multiapps.controller.persistence.model.FileEntry;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 
-public class FileServiceTest extends DatabaseFileServiceTest {
+class FileServiceTest extends DatabaseFileServiceTest {
 
     @Mock
     private FileStorage fileStorage;
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception {
         MockitoAnnotations.openMocks(this)
                           .close();
@@ -32,7 +31,7 @@ public class FileServiceTest extends DatabaseFileServiceTest {
     }
 
     @Test
-    public void addFileUploadFileErrorTest() throws Exception {
+    void addFileUploadFileErrorTest() throws Exception {
         Mockito.doThrow(new FileStorageException("expected exception"))
                .when(fileStorage)
                .addFile(Mockito.any(), Mockito.any());
@@ -52,35 +51,35 @@ public class FileServiceTest extends DatabaseFileServiceTest {
     }
 
     @Test
-    public void consumeFileContentTest() throws Exception {
+    void consumeFileContentTest() throws Exception {
         fileService.consumeFileContent(SPACE_1, "1111-2222-3333-4444", Mockito.mock(FileContentConsumer.class));
         Mockito.verify(fileStorage)
                .processFileContent(Mockito.eq(SPACE_1), Mockito.eq("1111-2222-3333-4444"), Mockito.any());
     }
 
     @Test
-    public void deleteBySpaceAndNamespaceTest() throws Exception {
+    void deleteBySpaceAndNamespaceTest() throws Exception {
         super.deleteBySpaceAndNamespaceTest();
         Mockito.verify(fileStorage)
                .deleteFilesBySpaceAndNamespace(Mockito.eq(SPACE_1), Mockito.eq(NAMESPACE_1));
     }
 
     @Test
-    public void deleteBySpaceAndNamespaceWithTwoNamespacesTest() throws Exception {
+    void deleteBySpaceAndNamespaceWithTwoNamespacesTest() throws Exception {
         super.deleteBySpaceAndNamespaceWithTwoNamespacesTest();
         Mockito.verify(fileStorage)
                .deleteFilesBySpaceAndNamespace(Mockito.eq(SPACE_1), Mockito.eq(NAMESPACE_1));
     }
 
     @Test
-    public void deleteBySpaceTest() throws Exception {
+    void deleteBySpaceTest() throws Exception {
         super.deleteBySpaceTest();
         Mockito.verify(fileStorage)
                .deleteFilesBySpace(Mockito.eq(SPACE_1));
     }
 
     @Test
-    public void deleteFileTest() throws Exception {
+    void deleteFileTest() throws Exception {
         FileEntry fileEntry = addTestFile(SPACE_1, NAMESPACE_1);
 
         boolean deleteFile = fileService.deleteFile(SPACE_2, fileEntry.getId());
@@ -95,7 +94,7 @@ public class FileServiceTest extends DatabaseFileServiceTest {
     }
 
     @Test
-    public void deleteFileErrorTest() throws Exception {
+    void deleteFileErrorTest() throws Exception {
         FileEntry fileEntry = addTestFile(SPACE_1, NAMESPACE_1);
 
         Mockito.doThrow(new FileStorageException("expected exception"))
@@ -114,20 +113,20 @@ public class FileServiceTest extends DatabaseFileServiceTest {
     }
 
     @Test
-    public void deleteByModificationTimeTest() throws Exception {
+    void deleteByModificationTimeTest() throws Exception {
         super.deleteByModificationTimeTest();
         Mockito.verify(fileStorage)
                .deleteFilesModifiedBefore(Mockito.any());
     }
 
     @Test
-    public void deleteFilesEntriesWithoutContentTest() throws Exception {
+    void deleteFilesEntriesWithoutContentTest() throws Exception {
         FileEntry noContent = addTestFile(SPACE_1, NAMESPACE_1);
         FileEntry noContent2 = addTestFile(SPACE_2, NAMESPACE_1);
         addTestFile(SPACE_1, NAMESPACE_2);
         addTestFile(SPACE_2, NAMESPACE_2);
         Mockito.when(fileStorage.getFileEntriesWithoutContent(Mockito.anyList()))
-               .thenReturn(Arrays.asList(noContent, noContent2));
+               .thenReturn(List.of(noContent, noContent2));
         int deleteWithoutContent = fileService.deleteFilesEntriesWithoutContent();
         assertEquals(2, deleteWithoutContent);
         assertNull(fileService.getFile(SPACE_1, noContent.getId()));
