@@ -1,20 +1,19 @@
 package org.cloudfoundry.multiapps.controller.process.flowable;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.cloudfoundry.multiapps.controller.core.cf.CloudControllerClientProvider;
 import org.cloudfoundry.multiapps.controller.persistence.services.HistoricOperationEventService;
 import org.cloudfoundry.multiapps.controller.persistence.services.ProgressMessageService;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.MockitoAnnotations;
 
-@RunWith(MockitoJUnitRunner.class)
-public class FlowableActionFactoryTest {
+class FlowableActionFactoryTest {
 
     private static final Action RESUME_ACTION_ID = Action.RESUME;
     private static final Action RETRY_ACTION_ID = Action.RETRY;
@@ -32,33 +31,33 @@ public class FlowableActionFactoryTest {
     @Mock
     CloudControllerClientProvider cloudControllerClientProvider;
 
+    @BeforeEach
+    void setUp() throws Exception {
+        MockitoAnnotations.openMocks(this)
+                          .close();
+    }
+
     @Test
-    public void testAbortAction() {
+    void testAbortAction() {
         Mockito.when(processActionRegistry.getAction(ABORT_ACTION_ID))
-               .thenReturn(new AbortProcessAction(facade,
-                                                  Collections.singletonList(additionalProcessAction),
-                                                  null,
-                                                  null,
-                                                  cloudControllerClientProvider));
+               .thenReturn(new AbortProcessAction(facade, List.of(additionalProcessAction), null, null, cloudControllerClientProvider));
         testAction(ABORT_ACTION_ID, AbortProcessAction.class);
     }
 
     @Test
-    public void testRetryAction() {
+    void testRetryAction() {
         Mockito.when(processActionRegistry.getAction(RETRY_ACTION_ID))
                .thenReturn(new RetryProcessAction(facade,
-                                                  Collections.singletonList(additionalProcessAction),
+                                                  List.of(additionalProcessAction),
                                                   historicOperationEventService,
                                                   cloudControllerClientProvider));
         testAction(RETRY_ACTION_ID, RetryProcessAction.class);
     }
 
     @Test
-    public void testResumeAction() {
+    void testResumeAction() {
         Mockito.when(processActionRegistry.getAction(RESUME_ACTION_ID))
-               .thenReturn(new ResumeProcessAction(facade,
-                                                   Collections.singletonList(additionalProcessAction),
-                                                   cloudControllerClientProvider));
+               .thenReturn(new ResumeProcessAction(facade, List.of(additionalProcessAction), cloudControllerClientProvider));
         testAction(RESUME_ACTION_ID, ResumeProcessAction.class);
     }
 
