@@ -1,6 +1,5 @@
 package org.cloudfoundry.multiapps.controller.process.jobs;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.cloudfoundry.multiapps.common.SLException;
@@ -18,7 +17,7 @@ class CleanUpJobTest {
                .when(cleaner2)
                .execute(Mockito.any());
         Cleaner cleaner3 = Mockito.mock(Cleaner.class);
-        List<Cleaner> cleaners = Arrays.asList(cleaner1, cleaner2, cleaner3);
+        List<Cleaner> cleaners = List.of(cleaner1, cleaner2, cleaner3);
 
         CleanUpJob cleanUpJob = createCleanUpJob(new ApplicationConfiguration(), cleaners);
         cleanUpJob.execute(null);
