@@ -5,7 +5,6 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -37,13 +36,11 @@ class UpdateServiceKeysStepTest extends SyncFlowableStepTest<UpdateServiceKeysSt
     static Stream<Arguments> testCreateUpdateServiceKeysStep() {
         return Stream.of(
                          // (1) There no exists service keys
-                         Arguments.of(Arrays.asList("key-1", "key-2", "key-3"), Collections.emptyList(), false, Collections.emptyList()),
+                         Arguments.of(List.of("key-1", "key-2", "key-3"), Collections.emptyList(), false, Collections.emptyList()),
                          // (2) Service key "key-2" should be deleted and "key-3" updated
-                         Arguments.of(Arrays.asList("key-1", "key-3"), Arrays.asList("key-1", "key-2", "key-3"), true,
-                                      Collections.singletonList("key-3")),
+                         Arguments.of(List.of("key-1", "key-3"), List.of("key-1", "key-2", "key-3"), true, List.of("key-3")),
                          // (3) Service key "key-2" should be reported that cannot be deleted and "key-1" updated
-                         Arguments.of(Arrays.asList("key-1", "key-3"), Arrays.asList("key-1", "key-2", "key-3"), false,
-                                      Collections.singletonList("key-1")));
+                         Arguments.of(List.of("key-1", "key-3"), List.of("key-1", "key-2", "key-3"), false, List.of("key-1")));
     }
 
     @ParameterizedTest
