@@ -1,6 +1,5 @@
 package org.cloudfoundry.multiapps.controller.process.util;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.cloudfoundry.multiapps.controller.api.model.ProcessType;
@@ -35,13 +34,13 @@ class HooksCalculatorTest {
     void testExecuteHooksForPhaseBeforeStart() {
         HooksCalculator hooksHelper = createHooksCalculator(HookPhase.DEPLOY_APPLICATION_BEFORE_START, HookPhase.NONE);
         Module moduleToDeploy = createModule("module-to-deploy");
-        Hook beforeStartIdleHook = createHook("before-start", Collections.singletonList("deploy.application.before-start"));
-        moduleToDeploy.setHooks(Collections.singletonList(beforeStartIdleHook));
+        Hook beforeStartIdleHook = createHook("before-start", List.of("deploy.application.before-start"));
+        moduleToDeploy.setHooks(List.of(beforeStartIdleHook));
         Mockito.when(processTypeParser.getProcessType(context.getExecution()))
                .thenReturn(ProcessType.DEPLOY);
         List<Hook> hooksForCurrentPhase = hooksHelper.calculateHooksForExecution(moduleToDeploy, StepPhase.EXECUTE);
         Assertions.assertEquals(1, hooksForCurrentPhase.size());
-        List<String> expectedHookPhases = Collections.singletonList("deploy.application.before-start");
+        List<String> expectedHookPhases = List.of("deploy.application.before-start");
         Assertions.assertEquals(expectedHookPhases, hooksForCurrentPhase.get(0)
                                                                         .getPhases());
     }
@@ -50,14 +49,14 @@ class HooksCalculatorTest {
     void testExecuteHooksForPhaseBeforeStartIdle() {
         HooksCalculator hooksHelper = createHooksCalculator(HookPhase.BLUE_GREEN_APPLICATION_BEFORE_START_IDLE, HookPhase.NONE);
         Module moduleToDeploy = createModule("module-to-deploy");
-        Hook beforeStartIdleHook = createHook("before-start-idle", Collections.singletonList("blue-green.application.before-start.idle"));
-        moduleToDeploy.setHooks(Collections.singletonList(beforeStartIdleHook));
+        Hook beforeStartIdleHook = createHook("before-start-idle", List.of("blue-green.application.before-start.idle"));
+        moduleToDeploy.setHooks(List.of(beforeStartIdleHook));
         Mockito.when(processTypeParser.getProcessType(context.getExecution()))
                .thenReturn(ProcessType.BLUE_GREEN_DEPLOY);
         context.setVariable(Variables.SUBPROCESS_PHASE, SubprocessPhase.BEFORE_APPLICATION_START);
         List<Hook> hooksForCurrentPhase = hooksHelper.calculateHooksForExecution(moduleToDeploy, StepPhase.EXECUTE);
         Assertions.assertEquals(1, hooksForCurrentPhase.size());
-        List<String> expectedHookPhases = Collections.singletonList("blue-green.application.before-start.idle");
+        List<String> expectedHookPhases = List.of("blue-green.application.before-start.idle");
         Assertions.assertEquals(expectedHookPhases, hooksForCurrentPhase.get(0)
                                                                         .getPhases());
     }
@@ -66,13 +65,13 @@ class HooksCalculatorTest {
     void testExecuteHooksForPhaseBeforeStartLive() {
         HooksCalculator hooksHelper = createHooksCalculator(HookPhase.BLUE_GREEN_APPLICATION_BEFORE_START_LIVE, HookPhase.NONE);
         Module moduleToDeploy = createModule("module-to-deploy");
-        Hook beforeStartLiveHook = createHook("before-start-live", Collections.singletonList("blue-green.application.before-start.live"));
-        moduleToDeploy.setHooks(Collections.singletonList(beforeStartLiveHook));
+        Hook beforeStartLiveHook = createHook("before-start-live", List.of("blue-green.application.before-start.live"));
+        moduleToDeploy.setHooks(List.of(beforeStartLiveHook));
         context.setVariable(Variables.SUBPROCESS_PHASE, SubprocessPhase.BEFORE_APPLICATION_START);
         context.setVariable(Variables.PHASE, Phase.AFTER_RESUME);
         List<Hook> hooksForCurrentPhase = hooksHelper.calculateHooksForExecution(moduleToDeploy, StepPhase.EXECUTE);
         Assertions.assertEquals(1, hooksForCurrentPhase.size());
-        List<String> expectedHookPhases = Collections.singletonList("blue-green.application.before-start.live");
+        List<String> expectedHookPhases = List.of("blue-green.application.before-start.live");
         Assertions.assertEquals(expectedHookPhases, hooksForCurrentPhase.get(0)
                                                                         .getPhases());
     }
@@ -81,13 +80,13 @@ class HooksCalculatorTest {
     void testExecuteHooksForPhaseBeforeStop() {
         HooksCalculator hooksHelper = createHooksCalculator(HookPhase.DEPLOY_APPLICATION_BEFORE_STOP, HookPhase.NONE);
         Module moduleToDeploy = createModule("module-to-deploy");
-        Hook beforeStartIdleHook = createHook("before-start", Collections.singletonList("deploy.application.before-stop"));
-        moduleToDeploy.setHooks(Collections.singletonList(beforeStartIdleHook));
+        Hook beforeStartIdleHook = createHook("before-start", List.of("deploy.application.before-stop"));
+        moduleToDeploy.setHooks(List.of(beforeStartIdleHook));
         Mockito.when(processTypeParser.getProcessType(context.getExecution()))
                .thenReturn(ProcessType.DEPLOY);
         List<Hook> hooksForCurrentPhase = hooksHelper.calculateHooksForExecution(moduleToDeploy, StepPhase.EXECUTE);
         Assertions.assertEquals(1, hooksForCurrentPhase.size());
-        List<String> expectedHookPhases = Collections.singletonList("deploy.application.before-stop");
+        List<String> expectedHookPhases = List.of("deploy.application.before-stop");
         Assertions.assertEquals(expectedHookPhases, hooksForCurrentPhase.get(0)
                                                                         .getPhases());
     }
@@ -96,14 +95,14 @@ class HooksCalculatorTest {
     void testExecuteHooksForPhaseBeforeStopIdle() {
         HooksCalculator hooksHelper = createHooksCalculator(HookPhase.BLUE_GREEN_APPLICATION_BEFORE_STOP_IDLE, HookPhase.NONE);
         Module moduleToDeploy = createModule("module-to-deploy");
-        Hook beforeStopIdleHook = createHook("before-stop-idle", Collections.singletonList("blue-green.application.before-stop.idle"));
-        moduleToDeploy.setHooks(Collections.singletonList(beforeStopIdleHook));
+        Hook beforeStopIdleHook = createHook("before-stop-idle", List.of("blue-green.application.before-stop.idle"));
+        moduleToDeploy.setHooks(List.of(beforeStopIdleHook));
         Mockito.when(processTypeParser.getProcessType(context.getExecution()))
                .thenReturn(ProcessType.BLUE_GREEN_DEPLOY);
         context.setVariable(Variables.SUBPROCESS_PHASE, SubprocessPhase.BEFORE_APPLICATION_START);
         List<Hook> hooksForCurrentPhase = hooksHelper.calculateHooksForExecution(moduleToDeploy, StepPhase.EXECUTE);
         Assertions.assertEquals(1, hooksForCurrentPhase.size());
-        List<String> expectedHookPhases = Collections.singletonList("blue-green.application.before-stop.idle");
+        List<String> expectedHookPhases = List.of("blue-green.application.before-stop.idle");
         Assertions.assertEquals(expectedHookPhases, hooksForCurrentPhase.get(0)
                                                                         .getPhases());
     }
@@ -112,13 +111,13 @@ class HooksCalculatorTest {
     void testExecuteHooksForPhaseBeforeStopLive() {
         HooksCalculator hooksHelper = createHooksCalculator(HookPhase.BLUE_GREEN_APPLICATION_BEFORE_STOP_LIVE, HookPhase.NONE);
         Module moduleToDeploy = createModule("module-to-deploy");
-        Hook beforeStopLiveHook = createHook("before-stop-live", Collections.singletonList("blue-green.application.before-stop.live"));
-        moduleToDeploy.setHooks(Collections.singletonList(beforeStopLiveHook));
+        Hook beforeStopLiveHook = createHook("before-stop-live", List.of("blue-green.application.before-stop.live"));
+        moduleToDeploy.setHooks(List.of(beforeStopLiveHook));
         Mockito.when(processTypeParser.getProcessType(context.getExecution()))
                .thenReturn(ProcessType.BLUE_GREEN_DEPLOY);
         List<Hook> hooksForCurrentPhase = hooksHelper.calculateHooksForExecution(moduleToDeploy, StepPhase.EXECUTE);
         Assertions.assertEquals(1, hooksForCurrentPhase.size());
-        List<String> expectedHookPhases = Collections.singletonList("blue-green.application.before-stop.live");
+        List<String> expectedHookPhases = List.of("blue-green.application.before-stop.live");
         Assertions.assertEquals(expectedHookPhases, hooksForCurrentPhase.get(0)
                                                                         .getPhases());
     }
@@ -127,13 +126,13 @@ class HooksCalculatorTest {
     void testExecuteHooksForPhaseAfterStop() {
         HooksCalculator hooksHelper = createHooksCalculator(HookPhase.NONE, HookPhase.DEPLOY_APPLICATION_AFTER_STOP);
         Module moduleToDeploy = createModule("module-to-deploy");
-        Hook afterStopHook = createHook("after-stop", Collections.singletonList("deploy.application.after-stop"));
-        moduleToDeploy.setHooks(Collections.singletonList(afterStopHook));
+        Hook afterStopHook = createHook("after-stop", List.of("deploy.application.after-stop"));
+        moduleToDeploy.setHooks(List.of(afterStopHook));
         Mockito.when(processTypeParser.getProcessType(context.getExecution()))
                .thenReturn(ProcessType.DEPLOY);
         List<Hook> hooksForCurrentPhase = hooksHelper.calculateHooksForExecution(moduleToDeploy, StepPhase.DONE);
         Assertions.assertEquals(1, hooksForCurrentPhase.size());
-        List<String> expectedHookPhases = Collections.singletonList("deploy.application.after-stop");
+        List<String> expectedHookPhases = List.of("deploy.application.after-stop");
         Assertions.assertEquals(expectedHookPhases, hooksForCurrentPhase.get(0)
                                                                         .getPhases());
     }
@@ -142,14 +141,14 @@ class HooksCalculatorTest {
     void testExecuteHooksForPhaseAfterStopIdle() {
         HooksCalculator hooksHelper = createHooksCalculator(HookPhase.NONE, HookPhase.BLUE_GREEN_APPLICATION_AFTER_STOP_IDLE);
         Module moduleToDeploy = createModule("module-to-deploy");
-        Hook afterStopIdleHook = createHook("after-stop-idle", Collections.singletonList("blue-green.application.after-stop.idle"));
-        moduleToDeploy.setHooks(Collections.singletonList(afterStopIdleHook));
+        Hook afterStopIdleHook = createHook("after-stop-idle", List.of("blue-green.application.after-stop.idle"));
+        moduleToDeploy.setHooks(List.of(afterStopIdleHook));
         Mockito.when(processTypeParser.getProcessType(context.getExecution()))
                .thenReturn(ProcessType.BLUE_GREEN_DEPLOY);
         context.setVariable(Variables.SUBPROCESS_PHASE, SubprocessPhase.BEFORE_APPLICATION_START);
         List<Hook> hooksForCurrentPhase = hooksHelper.calculateHooksForExecution(moduleToDeploy, StepPhase.DONE);
         Assertions.assertEquals(1, hooksForCurrentPhase.size());
-        List<String> expectedHookPhases = Collections.singletonList("blue-green.application.after-stop.idle");
+        List<String> expectedHookPhases = List.of("blue-green.application.after-stop.idle");
         Assertions.assertEquals(expectedHookPhases, hooksForCurrentPhase.get(0)
                                                                         .getPhases());
     }
@@ -158,13 +157,13 @@ class HooksCalculatorTest {
     void testExecuteHooksForPhaseAfterStopLive() {
         HooksCalculator hooksHelper = createHooksCalculator(HookPhase.NONE, HookPhase.BLUE_GREEN_APPLICATION_AFTER_STOP_LIVE);
         Module moduleToDeploy = createModule("module-to-deploy");
-        Hook afterStopLiveHook = createHook("after-stop-live", Collections.singletonList("blue-green.application.after-stop.live"));
-        moduleToDeploy.setHooks(Collections.singletonList(afterStopLiveHook));
+        Hook afterStopLiveHook = createHook("after-stop-live", List.of("blue-green.application.after-stop.live"));
+        moduleToDeploy.setHooks(List.of(afterStopLiveHook));
         Mockito.when(processTypeParser.getProcessType(context.getExecution()))
                .thenReturn(ProcessType.BLUE_GREEN_DEPLOY);
         List<Hook> hooksForCurrentPhase = hooksHelper.calculateHooksForExecution(moduleToDeploy, StepPhase.DONE);
         Assertions.assertEquals(1, hooksForCurrentPhase.size());
-        List<String> expectedHookPhases = Collections.singletonList("blue-green.application.after-stop.live");
+        List<String> expectedHookPhases = List.of("blue-green.application.after-stop.live");
         Assertions.assertEquals(expectedHookPhases, hooksForCurrentPhase.get(0)
                                                                         .getPhases());
     }
@@ -173,14 +172,13 @@ class HooksCalculatorTest {
     void testExecuteHooksForPhaseBeforeUnmapRoutes() {
         HooksCalculator hooksHelper = createHooksCalculator(HookPhase.BLUE_GREEN_APPLICATION_BEFORE_UNMAP_ROUTES_LIVE, HookPhase.NONE);
         Module moduleToDeploy = createModule("module-to-deploy");
-        Hook afterUnmapRoutesHook = createHook("before-unmap-routes",
-                                               Collections.singletonList("blue-green.application.before-unmap-routes.live"));
-        moduleToDeploy.setHooks(Collections.singletonList(afterUnmapRoutesHook));
+        Hook afterUnmapRoutesHook = createHook("before-unmap-routes", List.of("blue-green.application.before-unmap-routes.live"));
+        moduleToDeploy.setHooks(List.of(afterUnmapRoutesHook));
         Mockito.when(processTypeParser.getProcessType(context.getExecution()))
                .thenReturn(ProcessType.BLUE_GREEN_DEPLOY);
         List<Hook> hooksForCurrentPhase = hooksHelper.calculateHooksForExecution(moduleToDeploy, StepPhase.EXECUTE);
         Assertions.assertEquals(1, hooksForCurrentPhase.size());
-        List<String> expectedHookPhases = Collections.singletonList("blue-green.application.before-unmap-routes.live");
+        List<String> expectedHookPhases = List.of("blue-green.application.before-unmap-routes.live");
         Assertions.assertEquals(expectedHookPhases, hooksForCurrentPhase.get(0)
                                                                         .getPhases());
     }
@@ -198,8 +196,8 @@ class HooksCalculatorTest {
     private HooksCalculator createHooksCalculator(HookPhase hookPhaseBeforeStep, HookPhase hookPhaseAfterStep) {
         return ImmutableHooksCalculator.builder()
                                        .context(context)
-                                       .hookPhasesBeforeStep(Collections.singletonList(hookPhaseBeforeStep))
-                                       .hookPhasesAfterStep(Collections.singletonList(hookPhaseAfterStep))
+                                       .hookPhasesBeforeStep(List.of(hookPhaseBeforeStep))
+                                       .hookPhasesAfterStep(List.of(hookPhaseAfterStep))
                                        .build();
     }
 
